# Anki-CardMaker

./: .gitignore  AnkiCardMaker.ipynb  README.md  anki_cardmaker.py  create_template.py  pyproject.toml
cardtypes/Active/: Back.html  Front.html
cardtypes/Passive/: Back.html  Front.html
cardtypes/Writing/: Back.html  Front.html
